{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 37,
  "lineage": "67ed37b2-42f6-7b25-d281-0a0d9ea58862",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00aab5dfc482cf66d",
            "arn": "arn:aws:ec2:eu-west-1:019273956931:instance/i-088548db3c6a449e9",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-088548db3c6a449e9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.nano",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef8ac4c94d325812",
            "private_dns": "ip-172-31-11-49.eu-west-1.compute.internal",
            "private_ip": "172.31.11.49",
            "public_dns": "ec2-54-229-240-115.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.229.240.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01278ef84bf76708d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "daria-dev-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02b05e0a00fa2a2d8",
            "tags": {
              "Name": "daria-dev"
            },
            "tags_all": {
              "Name": "daria-dev"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fe40bfec40f7a258"
            ]
          },
          "dependencies": [
            "aws_s3_bucket.data_bucket",
            "aws_security_group.sg_web"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:security-group/sg-0fe40bfec40f7a258",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0fe40bfec40f7a258",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "daria-dev-sg",
            "name_prefix": "",
            "owner_id": "019273956931",
            "revoke_rules_on_delete": false,
            "tags": {
              "Env": "dev",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-01519ea046fe6e03e"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:internet-gateway/igw-030dbdffe84fa53ad",
            "id": "igw-030dbdffe84fa53ad",
            "owner_id": "019273956931",
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-030dbdffe84fa53ad",
            "id": "r-rtb-0a2296c8f5dfbbf411080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a2296c8f5dfbbf41",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_internet_gateway.this",
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:route-table/rtb-00bff90676cf7968b",
            "id": "rtb-00bff90676cf7968b",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:route-table/rtb-001014730991e786b",
            "id": "rtb-001014730991e786b",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:route-table/rtb-03ffdd539eebc458a",
            "id": "rtb-03ffdd539eebc458a",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:route-table/rtb-0a2296c8f5dfbbf41",
            "id": "rtb-0a2296c8f5dfbbf41",
            "owner_id": "019273956931",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd02e6a507edaf95",
            "route_table_id": "rtb-00bff90676cf7968b",
            "subnet_id": "subnet-05640895e9e2f59e9"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f229e5fc508ef57b",
            "route_table_id": "rtb-001014730991e786b",
            "subnet_id": "subnet-058a32ce57f9c363c"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c38a1a451cdcf77f",
            "route_table_id": "rtb-03ffdd539eebc458a",
            "subnet_id": "subnet-006d72a423791546d"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.private",
            "module.app_vpc.aws_subnet.private",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a209509d904d6848",
            "route_table_id": "rtb-0a2296c8f5dfbbf41",
            "subnet_id": "subnet-0606f822f8505f173"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9d9b353c2aa49ba",
            "route_table_id": "rtb-0a2296c8f5dfbbf41",
            "subnet_id": "subnet-074a449535bfd8692"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07e4a079dec249d26",
            "route_table_id": "rtb-0a2296c8f5dfbbf41",
            "subnet_id": "subnet-02eb5af5688908455"
          },
          "dependencies": [
            "module.app_vpc.aws_route_table.public",
            "module.app_vpc.aws_subnet.public",
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-05640895e9e2f59e9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05640895e9e2f59e9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-058a32ce57f9c363c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-058a32ce57f9c363c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-006d72a423791546d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-006d72a423791546d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-0606f822f8505f173",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0606f822f8505f173",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-074a449535bfd8692",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-074a449535bfd8692",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:subnet/subnet-02eb5af5688908455",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.103.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02eb5af5688908455",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "019273956931",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-048fc8bd9eff92574"
          },
          "dependencies": [
            "module.app_vpc.aws_vpc.this",
            "module.app_vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:019273956931:vpc/vpc-048fc8bd9eff92574",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02a64a0dc687cd9d1",
            "default_route_table_id": "rtb-0af5a70e5a23ecbbe",
            "default_security_group_id": "sg-014ff22bc4987db85",
            "dhcp_options_id": "dopt-07ccee96c00270bc3",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-048fc8bd9eff92574",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0af5a70e5a23ecbbe",
            "owner_id": "019273956931",
            "tags": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "daria-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}